--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,85 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: "Tenor Sans", sans-serif;
+  padding-bottom: 25px;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+[id="root"] {
+  width: 500px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+p {
+  margin-bottom: 20px;
+}
+
+ul {
+  list-style: none;
+}
+
+h1 {
+  text-transform: uppercase;
+  margin-top: 50px;
+  margin-bottom: 20px;
+}
+
+button {
+  background-color: white;
+  padding: 5px 25px;
+  border-radius: 5px;
+  border: 2px solid violet;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+button:hover,
+button:focus {
+  background-color: #8fd3f7;
+  color: white;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  display: flex;
+  justify-content: space-between;
+  width: 500px;
+  align-items: center;
+  font-size: 20px;
+  margin: 0;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+li:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+h1 {
+  color: violet;
+  font-size: 30px;
+  font-weight: 800;
+  width: 500px;
+}
+
+h2 {
+  margin: 0;
+  margin-top: 50px;
+  margin-bottom: 20px;
 }
